# opensesame

./: CHANGELOG.md  Cargo.toml  README.md
src/: command.rs  config.rs  detect.rs  editor.rs  error.rs  lib.rs
